deploy/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.notes.geisonbiazus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: backend-service
              servicePort: 80
    - host: notes.geisonbiazus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: frontend-service
              servicePort: 80
